--- a/sass/custom.css
+++ b/sass/custom.css
@@ -4,7 +4,7 @@
   }
 }
 
-.fondo-card {
+.fondi {
   background-image: url("testimonials-grid-section-maintestimonials-grid-section-mainimagesg-pattern-quotation.svg");
   background-repeat: no-repeat;
   background-position: 85% top;
