--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -8,8 +8,8 @@ $secondary: #EDF2F8;
       height:100vh ;
     }
 }
-.fondo-card{
-    background-image: url("testimonials-grid-section-main\testimonials-grid-section-main\images\bg-pattern-quotation.svg");
+.fondi {
+    background-image: url('testimonials-grid-section-main\testimonials-grid-section-main\images\bg-pattern-quotation.svg');
     background-repeat: no-repeat;
     background-position: 85% top;
 }
